--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ author:
   flickr           :
   facebook         : #
   foursquare       :
-  github           : https://github.com/basilwong
+  github           : "basilwong"
   google_plus      :
   keybase          :
   instagram        :
