fixed linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/basil-wong-971027a2/
+  linkedin         : "basil-wong-971027a2/"
   orcid            : 
   pinterest        :
   soundcloud       :
