added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Basil Wong"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Engineering Physics UBC"
   location         : "Vancouver"
   employer         : 
