--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ repository               : "basilwong.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
-future                   : true
+future                   : false
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
 talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
@@ -172,6 +172,8 @@ kramdown:
 
 # Collections
 collections:
+  posts:
+    output: true
   teaching:
     output: true
     permalink: /:collection/:path/
